; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/jit/llvm/extr_llvmjit.c_llvm_copy_attributes.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/jit/llvm/extr_llvmjit.c_llvm_copy_attributes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LLVMAttributeFunctionIndex = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @llvm_copy_attributes(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @LLVMAttributeFunctionIndex, align 4
  %10 = call i32 @LLVMGetAttributeCountAtIndex(i32 %8, i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = sext i32 %11 to i64
  %13 = mul i64 4, %12
  %14 = trunc i64 %13 to i32
  %15 = call i32* @palloc(i32 %14)
  store i32* %15, i32** %7, align 8
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @LLVMAttributeFunctionIndex, align 4
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @LLVMGetAttributesAtIndex(i32 %16, i32 %17, i32* %18)
  store i32 0, i32* %6, align 4
  br label %20

20:                                               ; preds = %33, %2
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %5, align 4
  %23 = icmp slt i32 %21, %22
  br i1 %23, label %24, label %36

24:                                               ; preds = %20
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* @LLVMAttributeFunctionIndex, align 4
  %27 = load i32*, i32** %7, align 8
  %28 = load i32, i32* %6, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @LLVMAddAttributeAtIndex(i32 %25, i32 %26, i32 %31)
  br label %33

33:                                               ; preds = %24
  %34 = load i32, i32* %6, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %6, align 4
  br label %20

36:                                               ; preds = %20
  ret void
}

declare dso_local i32 @LLVMGetAttributeCountAtIndex(i32, i32) #1

declare dso_local i32* @palloc(i32) #1

declare dso_local i32 @LLVMGetAttributesAtIndex(i32, i32, i32*) #1

declare dso_local i32 @LLVMAddAttributeAtIndex(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
